WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158186
JSGlobalLexicalEnvironment leaks SegmentedVector due to lack of destructor.
https://bugs.webkit.org/show_bug.cgi?id=158186
Summary
JSGlobalLexicalEnvironment leaks SegmentedVector due to lack of destructor.
Andreas Kling
Reported
2016-05-28 18:56:41 PDT
We're leaking all of the SegmentedVector backing stores from JSGlobalLexicalEnvironment since it doesn't get a destructor call.
Attachments
Proposed patch
(3.07 KB, patch)
2016-05-28 18:57 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2016-05-28 18:57:33 PDT
Created
attachment 280053
[details]
Proposed patch
Saam Barati
Comment 2
2016-05-28 20:23:36 PDT
Comment on
attachment 280053
[details]
Proposed patch r=me Nice catch
WebKit Commit Bot
Comment 3
2016-05-28 21:46:27 PDT
Comment on
attachment 280053
[details]
Proposed patch Clearing flags on attachment: 280053 Committed
r201494
: <
http://trac.webkit.org/changeset/201494
>
WebKit Commit Bot
Comment 4
2016-05-28 21:46:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug