JSGlobalLexicalEnvironment leaks SegmentedVector due to lack of destructor. <https://webkit.org/b/158186>

Reviewed by Saam Barati.

Give JSGlobalLexicalEnvironment a destroy() and set up a finalizer for it
like we do with JSGlobalObject. (This is needed because they don't inherit
from JSDestructibleObjects and thus can't use JSCell::needsDestruction to
ask for allocation in destructor space.)

This stops us from leaking all the SegmentedVector backing stores.

* runtime/JSGlobalLexicalEnvironment.cpp:
(JSC::JSGlobalLexicalEnvironment::destroy):
* runtime/JSGlobalLexicalEnvironment.h:
(JSC::JSGlobalLexicalEnvironment::create):


Canonical link: https://commits.webkit.org/176294@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201494 268f45cc-cd09-0410-ab3c-d52691b4dbfc